# Think-Probe

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  config.yml  pyproject.toml  run.py  verify_langgraph.py
app/: __init__.py  conversation.py  main.py
app/agent/: agent_manager.py  java_diagnosis_agent.py  shell_agent.py  triage_agent.py
app/agents/: base.py  java_expert.py  main.py  orchestrator.py  runner.py
app/agents/prompts/: main_agent.md  sub_agent.md
app/api/: chat_completions.py  conversations.py  mcp.py  skills.py
app/config/: config.py  env_config.py
app/context/: agent_context.py  conversation_context.py  mcp_context.py
app/core/: agent_factory.py  graph.py  llm.py  prompt_context.py  skill_manager.py
app/llm/: custom_open_ai.py
app/mcp/: linux_mcp_server.py
app/model/: __init__.py  default_model.py  default_model_provider.py
app/node/: __init__.py  java_diagnosis_agent.py  java_diagnosis_node.py  java_expert_agent.py  node_manager.py  orchestrator_agent.py  shell_agent.py  shell_node.py  transfer_to_agent.py  triage_agent.py  triage_node.py  workflow.py
app/schemas/: agent.py  mcp.py  skill.py
app/service/: context_compaction_service.py  conversation_service.py  mcp_service.py  message_service.py  stop_service.py  workflow_service.py
app/store/: database.py
app/tools/: __init__.py  file_editor.py  get_source_code_tool.py  search.py  source_code.py  terminal.py
app/utils/: chunk_util.py  logger.py  response_util.py
scratch/: test_events.py  test_nested_events.py
skills/: README.md
skills/system_stats/: SKILL.md
static/: script.js  style.css
templates/: index.html
tests/: test_apply_patch_tool.py  test_context_compaction_service.py  test_mcp_service.py  test_skill_manager.py  test_web_fetch_tool.py  test_web_search_tool.py
