[project]
name = "Think-Probe"
version = "0.1.0"
description = "A lightweight agent application based on LLM"
authors = [
    {name = "MartinDai", email = "xiaomingys@gmail.com"},
]
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "langchain>=1.2.15",
    "langgraph>=1.1.6",
    "langchain-openai>=1.1.12",
    "langchain-mcp-adapters>=0.2.2",
    "fastapi==0.115.12",
    "pydantic==2.10.6",
    "PyYAML==6.0.2",
    "uvicorn==0.34.0",
    "python-dotenv==1.1.0",
    "colorama==0.4.6",
    "jinja2==3.1.6",
    "pillow==11.2.1",
    "langfuse>=4.0.6",
    "sqlalchemy>=2.0.35",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0"
]
license = {text = "MIT"}
